--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,8 @@
     ],
 
     "require": {
-        "php": ">=5.4",
-        "symfony/framework-bundle": "~2.7|~3.0",
-        "symfony/form": "~2.7|~3.0"
+        "php": ">=7.0"
     },
-
-    "require-dev": {
-        "jms/serializer-bundle": "1.1.*",
-        "symfony/serializer": "~2.7|~3.0",
-        "phpunit/phpunit": "~4.8"
-    },
-
     "suggest": {
         "jms/serializer-bundle": "provides the handler for the JMSSerializer",
         "symfony/serializer": "provides the normalizer for the Symfony's Serializer"
